<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_self">

    <fragment
        android:id="@+id/navigation_self"
        android:name="com.jeasoon.bubblekit.ui.self.SelfFragment"
        android:label="@string/title_self"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/navigation_friend"
        android:name="com.jeasoon.bubblekit.ui.friend.FriendFragment"
        android:label="@string/title_friend"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/navigation_group"
        android:name="com.jeasoon.bubblekit.ui.group.GroupFragment"
        android:label="@string/title_group"
        tools:layout="@layout/fragment_chat" />
</navigation>